; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/hpux/extr_ioctl.c_hpux_ioctl_t.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/parisc/hpux/extr_ioctl.c_hpux_ioctl_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOPNOTSUPP = common dso_local global i32 0, align 4
@TIOCSWINSZ = common dso_local global i32 0, align 4
@TIOCGWINSZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i64)* @hpux_ioctl_t to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpux_ioctl_t(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* @EOPNOTSUPP, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %7, align 4
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @_IOC_NR(i64 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %24 [
    i32 106, label %14
    i32 107, label %19
  ]

14:                                               ; preds = %3
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @TIOCSWINSZ, align 4
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @sys_ioctl(i32 %15, i32 %16, i64 %17)
  store i32 %18, i32* %7, align 4
  br label %24

19:                                               ; preds = %3
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @TIOCGWINSZ, align 4
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @sys_ioctl(i32 %20, i32 %21, i64 %22)
  store i32 %23, i32* %7, align 4
  br label %24

24:                                               ; preds = %3, %19, %14
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local i32 @_IOC_NR(i64) #1

declare dso_local i32 @sys_ioctl(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
